NINE-688 added translations in locales

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -488,7 +488,8 @@
     "duration": "Trvání",
     "betsPerPoint": "Sázky na bod",
     "currentWinners": "Aktuální vítězové",
-    "previousRound": "Předcházející kolo"
+    "previousRound": "Předcházející kolo",
+    "endsIn": "Turnaj skončí za"
   },
   "dropsWinsSlots": {
     "title": "Drops <span class=\"Colored\">&</span> Wins Slots",
@@ -1419,7 +1420,8 @@
       {
         "text": "Výherce loterie bude oznámený 24. září."
       }
-    ]
+    ],
+    "winTesla": "Vyhrajte vůz Tesla"
   },
   "metaTags": {
     "promotions": {
