--- a/locales/nz.json
+++ b/locales/nz.json
@@ -488,7 +488,8 @@
     "duration": "Duration",
     "betsPerPoint": "Bets per point",
     "currentWinners": "Current winners",
-    "previousRound": "Previous round"
+    "previousRound": "Previous round",
+    "endsIn": "Tournament ends in"
   },
   "dropsWinsSlots": {
     "title": "Upgraded Drops & Wins Slots edition",
