--- a/locales/en.json
+++ b/locales/en.json
@@ -85,7 +85,7 @@
     "terms": "I am {minAge} years old and I accept the{br} {terms} and {policy}",
     "step2Title": "Please, fill the information below!",
     "thanksRegistration": "Thank you for registration",
-    "registrationBonus": "$150",
+    "registrationBonus": "€150",
     "registrationBonusText": "For your first deposit! Use advantage of Ninecasino Welcome Bonus",
     "getBonus": "Get your bonus",
     "enterEmail": "Enter email",
@@ -97,7 +97,7 @@
     "tryingConfirmEmail": "We're trying to verify your email",
     "confirmEmailError": "Sorry, you email was not confirmed",
     "confirmEmailSuccess": "Congratulations! Your email was successfully confirmed",
-    "bonus": "$450",
+    "bonus": "€450",
     "freeSpins": "250 free spins",
     "placeholders": {
       "enterEmail": "Enter your email",
@@ -224,23 +224,23 @@
     "heroBanner": {
       "deposit1": {
         "title": "Daily cashback  <br/>  up to <span class=\"Colored\">20%!</span>",
-        "text": "Make your first deposit<br/> and get <span class=\"Colored\">100%</span><br/> up to <span class=\"Colored\">$150</span> + <span class=\"Colored\">250 free spins</span>"
+        "text": "Make your first deposit<br/> and get <span class=\"Colored\">100%</span><br/> up to <span class=\"Colored\">€150</span> + <span class=\"Colored\">250 free spins</span>"
       },
       "deposit2": {
         "title": "Second deposit<br/> bonus",
-        "text": "55% bonus<br/> up to <span class=\"Colored\">$150</span><br/> on your second deposit"
+        "text": "55% bonus<br/> up to <span class=\"Colored\">€150</span><br/> on your second deposit"
       },
       "deposit3": {
         "title": "Third deposit<br/> bonus",
-        "text": "100% bonus<br/> up to <span class=\"Colored\">$150</span><br/> on your third deposit"
+        "text": "100% bonus<br/> up to <span class=\"Colored\">€150</span><br/> on your third deposit"
       },
       "deposit4": {
         "title": "weekend<br/> reload",
-        "text": "<span class=\"Colored\">40% up to $150</span>"
+        "text": "<span class=\"Colored\">40% up to €150</span>"
       },
       "highroller": {
         "title": "High roller<br/> bonus",
-        "text": "<span class=\"Colored\">up to $500</span>"
+        "text": "<span class=\"Colored\">up to €500</span>"
       }
     },
     "advantages": {
@@ -424,27 +424,27 @@
     "text": "Ninecasino is constantly working to deliver the best promotions. We use the latest technology and feedback from our players to improve our promos all the time. Enjoy!",
     "deposit1": {
       "title": "100%<br/> of the deposit<br/> amount",
-      "upTo": "up to $150 + 250 FREE SPINS",
+      "upTo": "up to €150 + 250 FREE SPINS",
       "name": "First deposit bonus",
-      "text": "Make your first deposit at NineCasino and get up to $150 + 250 free spins. After your first deposit, you'll get 50 Free Spins every day for the next 5 days.<br/><br/>To activate the bonus just make a first deposit of $20 or more. The bonus will be credited automatically."
+      "text": "Make your first deposit at NineCasino and get up to €150 + 250 free spins. After your first deposit, you'll get 50 Free Spins every day for the next 5 days.<br/><br/>To activate the bonus just make a first deposit of €20 or more. The bonus will be credited automatically."
     },
     "deposit2": {
       "title": "55%<br/> of the deposit<br/> amount",
-      "upTo": "up to $150",
+      "upTo": "up to €150",
       "name": "Second deposit bonus",
-      "text": "Make your second deposit at Ninecasino and get up to $150.<br/><br/>To activate the bonus just make a third deposit of $20 or more. The bonus will be credited automatically."
+      "text": "Make your second deposit at Ninecasino and get up to €150.<br/><br/>To activate the bonus just make a third deposit of €20 or more. The bonus will be credited automatically."
     },
     "deposit3": {
       "title": "100%<br/> of the deposit<br/> amount",
-      "upTo": "up to $150",
+      "upTo": "up to €150",
       "name": "Third deposit bonus",
-      "text": "Make your third deposit at Ninecasino and get up to $150.<br/><br/>To activate the bonus - just make third deposit of $20 or more. The bonus will be credited automatically."
+      "text": "Make your third deposit at Ninecasino and get up to €150.<br/><br/>To activate the bonus - just make third deposit of €20 or more. The bonus will be credited automatically."
     },
     "deposit4": {
       "title": "Weekend<br/> reload",
-      "upTo": "40% UP TO $150",
+      "upTo": "40% UP TO €150",
       "name": "weekend reload",
-      "text": "Start with more, win more. Deposit at least $20 and get a 40% bonus up to $150 to help spin those slots silly, until the jackpot explodes!"
+      "text": "Start with more, win more. Deposit at least €20 and get a 40% bonus up to €150 to help spin those slots silly, until the jackpot explodes!"
     },
     "cashback": {
       "title": "Daily<br/> cashback",
@@ -453,9 +453,9 @@
       "text": "Who doesn’t like free casino cashback when losing?<br/> Yes, you read right! We give you cashback with only 5x wagering when losing!"
     },
     "highroller": {
-      "upTo": "up to $500",
+      "upTo": "up to €500",
       "name": "High roller bonus",
-      "text": "Are you fond of making big bets? Then we’ve got what you need. Once a month get a special 30% high roller bonus up to $500 on your deposit, starting from $300."
+      "text": "Are you fond of making big bets? Then we’ve got what you need. Once a month get a special 30% high roller bonus up to €500 on your deposit, starting from €300."
     },
     "dropsWinsSlots": {
       "title": "Drops<span class=\"Colored\"> & </span>Wins<br/> Slots",
@@ -670,7 +670,7 @@
           "It's the responsibility of the player to ensure that all documents as a part of the KYC process are genuine. Faked or fraudulent documents provided may result in a confiscation of deposits and potential winnings of the player.",
           "In order to make a withdrawal, a player must play through active deposited amounts at least once prior to withdrawal. This procedure is in line with anti money laundering practices. The player is fully responsible for paying all fees and taxes applied to their winnings according to the laws of the jurisdiction of the player’s residence.",
           "The Website supports payouts via Original Credit Transfer (OCT) from Visa and via Payment Transfer from Mastercard. Additional requirements are that the respective credit card is not a corporate credit card and the card is issued in a supported country. For Visa, the following countries are not supported: Hong Kong, India, Indonesia, Japan, Korea, Malaysia, Singapore. For Mastercard, the following countries are supported: Andorra, Austria, Belgium, Cyprus, Czech Republic, Denmark, Estonia, France,  Germany, Gibraltar, Greece, Hungary, Iceland, Ireland, Italy, Latvia, Luxembourg, Malta, Monaco, Netherlands, Norway, San Marino, Slovakia, Slovenia, Spain, Switzerland, Turkey, and United Kingdom. Please note that even for supported countries the Website is not able to guarantee successful credit card payment processing in all cases, since banks issuing credit cards may block or reject such transactions at their own discretion.",
-          "In the unlikely event of a player depositing crypto currency funds to another crypto currency network address (such as but not limited to: sending BTC to a BCH address). Ninecasino will not attempt to recover the amount unless it exceeds $5000. In such cases, a fee of 0.1 BTC will be charged in order to recover the lost funds to cover expenses to pursue the recovery, however it's not a guarantee to get the funds recovered.",
+          "In the unlikely event of a player depositing crypto currency funds to another crypto currency network address (such as but not limited to: sending BTC to a BCH address). Ninecasino will not attempt to recover the amount unless it exceeds €5000. In such cases, a fee of 0.1 BTC will be charged in order to recover the lost funds to cover expenses to pursue the recovery, however it's not a guarantee to get the funds recovered.",
           "The internal operating currency of the Website is Euro. Due to this fact, in case you transact in other currencies, the amount deducted from your credit card may be insignificantly higher than displayed at the time of transaction due to currency conversions on the side of your bank and/or the Casino's payment processing system.",
           "All Bank Transfer payouts are processed within five (5) banking days. Please mind that you will not be able to request a Bank Transfer for USD payouts.",
           "You acknowledge that withdrawals via bank transfers can in exceptional cases be subject to additional charges by the intermediary banks. These charges remain outside the influence of The Casino and are limited to the equivalent of EUR 16.",
