--- a/locales/el.json
+++ b/locales/el.json
@@ -294,7 +294,12 @@
         "max" : "Max prize"
       },
       "wagerAmountRequirement" : "Απαίτηση ποσού στοιχήματος",
-      "wageredPercent" : "Ποσοστό πονταρίσματος"
+      "wageredPercent" : "Ποσοστό πονταρίσματος",
+      "promoCode": {
+        "title": "I have a bonus code",
+        "placeholder": "Promo code",
+        "button": "Redeem"
+      }
     },
     "history" : {
       "tabs" : {
