--- a/locales/fr.json
+++ b/locales/fr.json
@@ -290,7 +290,12 @@
         "max": "Prix maximum"
       },
       "wagerAmountRequirement": "Montant requis pour la mise",
-      "wageredPercent": "Pourcentage de mise"
+      "wageredPercent": "Pourcentage de mise",
+      "promoCode": {
+        "title": "I have a bonus code",
+        "placeholder": "Promo code",
+        "button": "Redeem"
+      }
     },
     "history": {
       "tabs": {
