--- a/locales/cs.json
+++ b/locales/cs.json
@@ -30,7 +30,8 @@
     "checkBonuses": "Zkontroluj si bonusy",
     "cancelBonus": "Zrušit bonus",
     "goBack": "Vrátit se",
-    "createAccount": "Vytvořit účet"
+    "createAccount": "Vytvořit účet",
+    "redeem": "Redeem"
   },
   "errors": {
     "required": "Nemůže to být prázdné",
@@ -299,8 +300,7 @@
       "wageredPercent": "Sázené procento",
       "promoCode": {
         "title": "I have a bonus code",
-        "placeholder": "Promo code",
-        "button": "Redeem"
+        "placeholder": "Promo code"
       }
     },
     "history": {
