--- a/locales/el.json
+++ b/locales/el.json
@@ -31,7 +31,8 @@
     "checkBonuses" : "Έλεγχος μπόνους",
     "cancelBonus" : "Aκύρωσης μπόνους ",
     "goBack" : "Πήγαινε πίσω",
-    "createAccount" : "ΔΗΜΙΟΥΡΓΗΣΤΕ ΛΟΓΑΡΙΑΣΜΟ"
+    "createAccount" : "ΔΗΜΙΟΥΡΓΗΣΤΕ ΛΟΓΑΡΙΑΣΜΟ",
+    "redeem": "Redeem"
   },
   "errors" : {
     "required" : "Δεν μπορεί να είναι κενό",
@@ -297,8 +298,7 @@
       "wageredPercent" : "Ποσοστό πονταρίσματος",
       "promoCode": {
         "title": "I have a bonus code",
-        "placeholder": "Promo code",
-        "button": "Redeem"
+        "placeholder": "Promo code"
       }
     },
     "history" : {
