--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -31,7 +31,8 @@
     "checkBonuses": "Check bonuses",
     "cancelBonus": "Cancel bonus",
     "goBack": "Go back",
-    "createAccount": "Create account"
+    "createAccount": "Create account",
+    "redeem": "Redeem"
   },
   "errors": {
     "required": "Can't be blank",
@@ -305,8 +306,7 @@
       "wageredPercent": "Wagered percent",
       "promoCode": {
         "title": "I have a bonus code",
-        "placeholder": "Promo code",
-        "button": "Redeem"
+        "placeholder": "Promo code"
       }
     },
     "history": {
