--- a/locales/fr.json
+++ b/locales/fr.json
@@ -31,7 +31,8 @@
     "checkBonuses": "Vérifiez les bonus",
     "cancelBonus": "Annuler le bonus",
     "goBack": "Retour",
-    "createAccount": "Enregistrer"
+    "createAccount": "Enregistrer",
+    "redeem": "Redeem"
   },
   "errors": {
     "required": "Ne peut pas être vide",
@@ -293,8 +294,7 @@
       "wageredPercent": "Pourcentage de mise",
       "promoCode": {
         "title": "I have a bonus code",
-        "placeholder": "Promo code",
-        "button": "Redeem"
+        "placeholder": "Promo code"
       }
     },
     "history": {
