--- a/locales/pl.json
+++ b/locales/pl.json
@@ -31,7 +31,8 @@
     "checkBonuses": "Sprawdź bonusy",
     "cancelBonus": "Anuluj bonus",
     "goBack": "Cofnij się",
-    "createAccount": "Utwórz konto"
+    "createAccount": "Utwórz konto",
+    "redeem": "Redeem"
   },
   "errors": {
     "required": "Nie może być puste",
@@ -297,8 +298,7 @@
       "wageredPercent": "Obstawiony procent",
       "promoCode": {
         "title": "I have a bonus code",
-        "placeholder": "Promo code",
-        "button": "Redeem"
+        "placeholder": "Promo code"
       }
     },
     "history": {
