--- a/locales/fi.json
+++ b/locales/fi.json
@@ -463,34 +463,12 @@
       "name" : "TURVAVYÖ KIINNI VIIKKOKISAA VARTEN",
       "text" : "On Viikkokisan aika, ja palkintomme saa sinut tavoittelemaan ykkössijaa!\n<br/><br/>Käynnissä 7 päivää joka viikko torstaista klo 00.01 UTC keskiviikkoon 23.59 UTC. Nappaa mahdollisuus jakaa palkintosijan veroinen 2 500 € palkintopotti 40 onnekkaan kuljettajan kanssa.<br/><br/>Panosta vähintään 0,5 € ja valmistaudu kisaan.<br/><br/>Onnea matkaan – aloitetaan kisa!"
     },
-    "sumdes" : {
-      "title" : "Summer Desserts<br/> Tournament",
-      "upTo" : "€100,000",
-      "name" : "Hunt down 100k with Summer Desserts",
-      "text" : "The summer is in full swing, so what’s better than a Tournament Series from Booongo! Hurry up to enjoy the Summer Desserts Network Tournament Series at NineCasino! <br/>Summer Desserts Network Tournament Series runs between August 19th, 2021 (0:00 UTC) and August 28th, 2021 (23:00 UTC).<br/><br/>nWhat are you waiting for? Don’t miss out on sharing the huge prize pool from Booongo! Play, enjoy, and win!"
-    },
-    "demigods" : {
-      "title" : "Demi God Tales <br>Tournament",
-      "upTo" : "€20,000",
-      "name" : "Become the hero of the Demi God Tales",
-      "text" : "Greek myths about gods, demigods, heroes and humans make up a thousand fascinating stories told to mankind for centuries. Spinomenal took these immense tales and turned them into an unforgettable series of slot games in the Demi Gods Tales Tournament."
-    },
-    "spiritOfEgypt" : {
-      "upTo" : "The prize pool is €60,000.",
-      "name" : "Spirit of Egypt 60k",
-      "text" : "Let the Spirit of Egypt guide you to 60k<br/><br/>New adventures are on the horizon and Playson is waiting with the Spirit of Egypt 60k tournament, running between 0:01 UTC on the 20th of August 2021 and 23:59 UTC 29th of August 2021.<br/><br/>The total Prize pool is a whopping €60,000, and if you reach the peak of the pyramid the top prize is €10,000! Search for tombs, mummies and prizes with the Spirit of Egypt 60k!"
-    },
-    "twitterGiveaway" : {
-      "title" : "twitter<br/> Giveaway",
-      "upTo" : "600 Free Spins",
-      "name" : "600 Free Spins Giveaway on Twitter",
-      "text" : "We’ve prepared a giveaway for you on our official {twitterAccount}.{br}{br} Follow us, like this {tweet}, and wait for the results on August 26th. We will randomly choose 3 winners and each of them will receive 200 Free Spins in the Wolf Gold slot.{br}{br}Good Luck!"
+    "letItBeer": {
+      "title": "Let it Beer-turnauksen Kierros I",
+      "prize": "20 000 €",
+      "name": "Tervehdi ”Let it BEER”-turnausta",
+      "text": "Oktoberfest on aivan nurkan takana, joten lyöttäydyimme yhteen Spinomenalin kanssa ja valmistelimme siistin turnauksen: ”Let it BEER”. Mutta pysy selvänä pelatessasi, niin et jää paitsi mahdollisuudesta napata osuuttasi 20 000 € palkintopotista! Kierros I on käynnissä 14. syyskuuta klo 00.00 – 22. syyskuuta klo 23.59 (GMT).<br/><br/> Osallistu kierrokselle I pelaamalla mitä tahansa osallistuvaa peliä. Lokakuun olutfestivaali on täällä!"
     }
-  },
-  "twitter" : {
-    "twitterBtn" : "Twitter",
-    "twitterAccount" : "Twitter account",
-    "tweet" : "tweet"
   },
   "tournaments" : {
     "games" : "PELIT TÄSSÄ TURNAUKSESSA",
@@ -1395,96 +1373,6 @@
       }
     ]
   },
-  "sumdes" : {
-    "title" : "Summer Desserts<br> Tournament",
-    "prize" : "€100,000",
-    "text" : "The summer is in full swing, so what’s better than a Tournament Series from Booongo! Hurry up to enjoy the Summer Desserts Network Tournament Series at NineCasino! Summer Desserts Network Tournament Series runs between August 19th, 2021 (0:00 UTC) and August 28th, 2021 (23:00 UTC). Don’t miss out on sharing the huge prize pool from Booongo!",
-    "textMobile" : "The summer is in full swing, so what’s better than a Tournament Series from Booongo! Hurry up to enjoy the Summer Desserts Network Tournament Series at NineCasino! Summer Desserts Network Tournament Series runs between August 19th, 2021 (0:00 UTC) and August 28th, 2021 (23:00 UTC). Don’t miss out on sharing the huge prize pool from Booongo!",
-    "terms" : [
-      {
-        "title" : "Summer Desserts Network Tournament Series runs between August 19th, 2021 (0:00 UTC) and August 28th, 2021 (23:00 UTC)."
-      },
-      {
-        "title" : "It’s a combo of regular tournaments with mixed terms (the duration of each tournament in the series can vary); the Scoring tournament (where players will get points for each win spin) and also a 2nd (EXTRA) Leaderboard reflecting the player’s overall progress."
-      },
-      {
-        "title" : "Challenge for the Grand Total Prize Pool of €100,000 (or player’s currency equivalent):<br>- €80,000 in total for 10 regular tournaments (€8,000 EUR for each one); <br>- €20,000 for the Series Leaderboard ( prizes are paid out simultaneously with a closing Regular Tournament of the Series on 28.08.2021 23:00 UTC)."
-      },
-      {
-        "title" : "Battle it out with these breathtaking games:<br>3 Coins Egypt; Pearl Diver; Wukong; Sun of Egypt 2; 15 Dragon Pearls; Hit the Gold!; 3 Coins; Magic Apple; Sun of Egypt; Dragon Pearls; Scarab Temple; Wolf Saga; Aztec Sun; Aztec Pyramid; Scarab Boost."
-      },
-      {
-        "title" : "Make a minimum bet of €0,5"
-      },
-      {
-        "title" : "The minimum number of spins is 100."
-      },
-      {
-        "title" : "Players will get points for each win spin - €1=1 Point. Players will get 1 Point for each х1 multiplier in win Spin."
-      }
-    ],
-    "metaInfo" : {
-      "title" : "➤ Summer Desserts  Tournament With Solid Prize Pool €100,000 - Play Your Favorite Games And Win Great Prizes!",
-      "description" : "✭ Try Your Luck In New Summer Desserts  by Booongo ➔ Complete Missions - Win Prizes!"
-    }
-  },
-  "spiritOfEgypt" : {
-    "title" : "Spirit of Egypt 60k",
-    "prize" : "€60,000",
-    "text" : "New adventures are on the horizon and Playson is waiting with the Spirit of Egypt 60k tournament, running between 0:01 UTC on the 20th of August 2021 and 23:59 UTC 29th of August 2021.<br/><br/>The total Prize pool is a whopping €60,000, and if you reach the peak of the pyramid the top prize is €10,000! Make your own luck with the Spirit of Egypt 60k!",
-    "textMobile" : "New adventures are on the horizon and Playson is waiting with the Spirit of Egypt 60k tournament, running between 0:01 UTC on the 20th of August 2021 and 23:59 UTC 29th of August 2021.<br/><br/>The total Prize pool is a whopping €60,000, and if you reach the peak of the pyramid the top prize is €10,000! Make your own luck with the Spirit of Egypt 60k!",
-    "metaInfo" : {
-      "title" : "➤ Spirit of Egypt 60k Tournament With Solid Prize Pool €60,000 - Play Your Favorite Games And Win Great Prizes!",
-      "description" : "✭ Try Your Luck In New Spirit of Egypt 60k by Playson ➔ Each Won Bet Brings You Points!"
-    },
-    "terms" : [
-      {
-        "title" : "The Spirit of Egypt 60k tournament, running between 0:01 UTC on the 20th of August 2021 and 23:59 UTC 29th of August 2021."
-      },
-      {
-        "title" : "The total Prize pool is €60,000."
-      },
-      {
-        "title" : "The 20 participating games: <br/>● 5 Fortunator <br/>● 9 Happy Pharaohs <br/>● Book of Gold 2: Double HitTM <br/>● Book of Gold: Multichance <br/>● Buffalo Power MegawaysTM <br/>● Buffalo Power: Hold and Win <br/>● Burning Wins: classic 5 lines <br/>● Divine Dragon: Hold and Win <br/>● Eagle Power: Hold and Win <br/>● Hot Burning Wins <br/>● Hot Coins: Hold and Win <br/>● Legend of Cleopatra <br/>● Legend of Cleopatra MegawaysTM <br/>● Rich Diamonds: Hold and Win <br/>● Rise of Egypt Deluxe <br/>● Sevens n Fruits <br/>● Solar Queen <br/>● Solar Temple <br/>● Spirit of Egypt: Hold and Win <br/>● Wolf Power: Hold and Win."
-      },
-      {
-        "title" : "No minimum bet is required to qualify."
-      },
-      {
-        "title" : "Points are calculated round-by-round, with each 1 EUR (or currency equivalent) wagered equaling 100 points."
-      }
-    ]
-  },
-  "demigods" : {
-    "title" : "Demi God Tales Tournament<br>Round II",
-    "prize" : "€20,000",
-    "text" : "Greek myths about gods, demigods, heroes and humans make up a thousand fascinating stories told to mankind for centuries. Spinomenal took these immense tales and turned them into an unforgettable series of slot games in the Demi Gods Tales Tournament.",
-    "textMobile" : "Greek myths about gods, demigods, heroes and humans make up a thousand fascinating stories told to mankind for centuries. Spinomenal took these immense tales and turned them into an unforgettable series of slot games in the Demi Gods Tales Tournament.",
-    "terms": [
-      {
-        "title": "Round II runs between August 30th 00:00 GMT and September 5th 23:59 GMT.<br><br>"
-      },
-      {
-        "title": "Participating games: <br>Demi Gods III, Demi Gods III – 15 Lines, Book Of Demi Gods III.<br><br>"
-      },
-      {
-        "title": "The 150 first players on the leaderboard will share a prize of 20,000 EUR.<br><br>"
-      },
-      {
-        "title": "Play any of the participating games. Each time the “Odin” symbol lands on one of the reels, you will be rewarded with 1 point (for example, if at the end of a spin 3 Odin symbols appear on the reels, you will be rewarded with 3 points)."
-      },
-      {
-        "title": "5. Points received are tallied throughout the tournament period. The more points you collect, the higher your position on the leaderboard."
-      },
-      {
-        "title": "Minimum qualifying bet per spin to participate in the tournament is 0.5 EUR."
-      }
-    ],
-    "metaInfo" : {
-      "title" : "➤ Demi God Tales Tournament With Solid Prize Pool €40,000 - Play Your Favorite Games And Win Great Prizes!",
-      "description" : "✭ Try Your Luck In New Demi God Tales by Spinomenal  ➔ Complete Missions - Win Prizes!"
-    }
-  },
   "happy_harvest_lotto": {
     "title": "Happy Harvest<br/> Lotto",
     "promoTitle": "5 000 ilmaiskierrosta sadonkorjuun sankareille",
@@ -1517,5 +1405,81 @@
     ],
     "metaTitle": "➤ Happy Harvest Lotto With Solid Prize Pool 5,000 Free Spins - Play Your Favorite Games And Win Great Prizes!",
     "metaDescription": "✭ Try Your Luck In New Happy Harvest Lotto by NineCasino ➔ Complete Missions - Win Prizes!"
+  },
+  "letItBeer": {
+    "title": "Let it Beer<br>-turnauksen <br>Kierros I",
+    "prize": "20 000 €",
+    "text": "Oktoberfest on aivan nurkan takana, joten lyöttäydyimme yhteen Spinomenalin kanssa ja valmistelimme siistin turnauksen: ”Let it BEER”. Mutta pysy selvänä pelatessasi, niin et jää paitsi mahdollisuudesta napata osuuttasi 20 000 € palkintopotista! <br/><br/>Älä huoli, vaan nauti humalasta ”Let it BEER” -turnauksessa!",
+    "textMobile": "Oktoberfest on aivan nurkan takana, joten lyöttäydyimme yhteen Spinomenalin kanssa ja valmistelimme siistin turnauksen: ”Let it BEER”. Mutta pysy selvänä pelatessasi, niin et jää paitsi mahdollisuudesta napata osuuttasi 20 000 € palkintopotista!",
+    "terms": [
+      {
+        "title": "Kierros I on käynnissä 14. syyskuuta klo 00.00 – 22. syyskuuta klo 23.59 (GMT)."
+      },
+      {
+        "title": "Tulostaulun ensimmäiset 150 pelaajaa jakavat 20 000 € palkintopotin."
+      },
+      {
+        "title": "Let it Beer -turnauksen kierroksella I on kolme osallistuvaa peliä: OktoberSpinFest, Beer Collection 10 Lines ja Beer Collection 40 Lines."
+      },
+      {
+        "title": "Turnaukseen osallistumiseen vaadittava minimipanos kierrosta kohti on 0,5 €. "
+      },
+      {
+        "title": "Jokainen voitto antaa sinulle pistemäärän voittokertoimen perusteella (jos esimerkiksi panostat 1 € ja voitat 10 €, saat 10 pistettä)."
+      },
+      {
+        "title": "Saadut pisteet lasketaan yhteen koko turnauksen ajalta. Mitä enemmän pisteitä keräät, sitä korkeammalle sijoitut tulostaulussa."
+      }
+    ],
+    "metaTags": {
+      "title": "➤ Let it BEER  Tournament With Solid Prize Pool €40,000 - Play Your Favorite Games And Win Great Prizes!",
+      "description": "✭ Try Your Luck In New Let it BEER  by Spinomenal  ➔ Each Won Bet Brings You Points!"
+    }
+  },
+  "metaTags": {
+    "promotions": {
+      "title": "Promotions",
+      "description": "Here You Can Find Out About Our Welcome Bonus For New Players And Other Regular Promotions At Ninecasino"
+    },
+    "daily-cashback": {
+      "title": "Daily Cashback Up To 20%",
+      "description": "Daily Cashback Up To 20% - If You Lose We Give You Cashback with x5 wagering."
+    },
+    "about-us": {
+      "title": "Information About Ninecasino",
+      "description": "Detailed Information About Us, Our Software, And What We Offer Our Clients ✓ Fast withdrawal ✓ Fully licensed"
+    },
+    "faq": {
+      "title": "FAQ",
+      "description": "Frequently Asked Questions - Here You Can Find Answers To The Most Popular Questions About Ninecasino"
+    },
+    "terms": {
+      "title": "Terms & Conditions",
+      "description": "This Page Will Help You To Stay Informed About Ninecasino's Terms And Conditions While Interacting With Our Site"
+    },
+    "bonus-terms": {
+      "title": "Information About Bonuses – How To Receive And Withdraw Your Bonuses In Ninecasino",
+      "description": "Detailed Information About Bonuses: How To Receive And Withdraw Bonuses At Ninecasino"
+    },
+    "responsible-gaming": {
+      "title": "Responsible and Controlled Gambling At Ninecasino",
+      "description": "Here You Can Find About Responsible Gaming Tools At Your Disposal To Control Your Gaming Experience"
+    },
+    "risk-warnings": {
+      "title": "Risk Warnings",
+      "description": "Information About The Risks You Take Paticipating In Games At Ninecasino"
+    },
+    "privacy-policy": {
+      "title": "Privacy Policy",
+      "description": "Privacy Policy Of Ninecasino: Everything You Need To Know About The Safety Of Your Financial Information And Personal Account"
+    },
+    "bitcoins": {
+      "title": "How To Play On Ninecasino With Bitcoins",
+      "description": "Detailed Information How You Can Play With Bitcoin at Ninecasino"
+    },
+    "aml-policy": {
+      "title": "Incorporating Fraud and Anti Money Laundering Policy",
+      "description": "Detailed Information About How We Handle Incorporating Fraud and Anti Money Laundering"
+    }
   }
 }
