--- a/locales/nz.json
+++ b/locales/nz.json
@@ -467,6 +467,12 @@
       "upTo": "prize pool €2,500",
       "name": "Saddle up for the Weekly Derby",
       "text": "It’s Weekly Derby time, and our prizes will have you chomping at the bit to be first past the post!<br/><br/>Running for 7 days every week from Thursday 00:01 UTC to Wednesday 23:59 UTC. Grab your chance to share a podium worthy prize pool of €2,500 with 40 lucky riders.<br/><br/>Just make a minimum bet of €0.5 and be ready for the race. <br/><br/>Good luck and let’s begin the Derby!"
+    },
+    "letItBeer": {
+      "title": "Let it BEER Tournament Round I",
+      "prize": "€20,000",
+      "name": "Say cheers with the “Let it BEER” Tournament",
+      "text": "Oktoberfest is just around the corner, so we have teamed up with Spinomenal and prepared a nice cool tournament: “Let it BEER”. But stay sober whilst playing and don’t miss a chance to hop into the refreshing €20,000 prize pool! Round I runs between September 14th, 00:00 and September 22nd, 23:59 (GMT).<br/><br/>To take part in Round I just play any of the participating games. October’s beer fest is here!"
     }
   },
   "tournaments": {
@@ -1409,5 +1415,81 @@
     ],
     "metaTitle": "➤ Happy Harvest Lotto With Solid Prize Pool 5,000 Free Spins - Play Your Favorite Games And Win Great Prizes!",
     "metaDescription": "✭ Try Your Luck In New Happy Harvest Lotto by NineCasino ➔ Complete Missions - Win Prizes!"
+  },
+  "letItBeer": {
+    "title": "Let it BEER<br> Tournament<br> Round I",
+    "prize": "€20,000",
+    "text": "Oktoberfest is just around the corner, so we have teamed up with Spinomenal and prepared a nice cool tournament: “Let it BEER”. But stay sober whilst playing and don’t miss a chance to hop into the refreshing €20,000 prize pool!<br/><br/>Don’t worry be hoppy with the “Let it BEER” Tournament!",
+    "textMobile": "Oktoberfest is just around the corner, so we have teamed up with Spinomenal and prepared a nice cool tournament: “Let it BEER”. But stay sober whilst playing and don’t miss a chance to hop into the refreshing €20,000 prize pool!",
+    "terms": [
+      {
+        "title": "Round I runs between September 14th, 00:00 and September 22nd, 23:59 (GMT)"
+      },
+      {
+        "title": "The 150 first players on the leaderboard will share a prize of €20,000."
+      },
+      {
+        "title": "Round I has 3 participating games: OktoberSpinFest, Beer Collection 10 Lines, and Beer Collection 40 Lines. "
+      },
+      {
+        "title": "The minimum qualifying bet per spin to participate in the tournament is €0.5."
+      },
+      {
+        "title": "Each win rewards you with a score based on the win multiplier (for example if you wagered 1 EUR and won 10 EUR, you would receive 10 points)."
+      },
+      {
+        "title": "Points received are summed up throughout the tournament period.  The more points you collect, the higher your position on the leaderboard."
+      }
+    ],
+    "metaTags": {
+      "title": "➤ Let it BEER  Tournament With Solid Prize Pool €40,000 - Play Your Favorite Games And Win Great Prizes!",
+      "description": "✭ Try Your Luck In New Let it BEER  by Spinomenal  ➔ Each Won Bet Brings You Points!"
+    }
+  },
+  "metaTags": {
+    "promotions": {
+      "title": "Promotions",
+      "description": "Here You Can Find Out About Our Welcome Bonus For New Players And Other Regular Promotions At Ninecasino"
+    },
+    "daily-cashback": {
+      "title": "Daily Cashback Up To 20%",
+      "description": "Daily Cashback Up To 20% - If You Lose We Give You Cashback with x5 wagering."
+    },
+    "about-us": {
+      "title": "Information About Ninecasino",
+      "description": "Detailed Information About Us, Our Software, And What We Offer Our Clients ✓ Fast withdrawal ✓ Fully licensed"
+    },
+    "faq": {
+      "title": "FAQ",
+      "description": "Frequently Asked Questions - Here You Can Find Answers To The Most Popular Questions About Ninecasino"
+    },
+    "terms": {
+      "title": "Terms & Conditions",
+      "description": "This Page Will Help You To Stay Informed About Ninecasino's Terms And Conditions While Interacting With Our Site"
+    },
+    "bonus-terms": {
+      "title": "Information About Bonuses – How To Receive And Withdraw Your Bonuses In Ninecasino",
+      "description": "Detailed Information About Bonuses: How To Receive And Withdraw Bonuses At Ninecasino"
+    },
+    "responsible-gaming": {
+      "title": "Responsible and Controlled Gambling At Ninecasino",
+      "description": "Here You Can Find About Responsible Gaming Tools At Your Disposal To Control Your Gaming Experience"
+    },
+    "risk-warnings": {
+      "title": "Risk Warnings",
+      "description": "Information About The Risks You Take Paticipating In Games At Ninecasino"
+    },
+    "privacy-policy": {
+      "title": "Privacy Policy",
+      "description": "Privacy Policy Of Ninecasino: Everything You Need To Know About The Safety Of Your Financial Information And Personal Account"
+    },
+    "bitcoins": {
+      "title": "How To Play On Ninecasino With Bitcoins",
+      "description": "Detailed Information How You Can Play With Bitcoin at Ninecasino"
+    },
+    "aml-policy": {
+      "title": "Incorporating Fraud and Anti Money Laundering Policy",
+      "description": "Detailed Information About How We Handle Incorporating Fraud and Anti Money Laundering"
+    }
   }
 }
