--- a/locales/za.json
+++ b/locales/za.json
@@ -463,17 +463,12 @@
       "name" : "Saddle up for the Weekly Derby",
       "text" : "It’s Weekly Derby time, and our prizes will have you chomping at the bit to be first past the post!<br/><br/>Running for 7 days every week from Thursday 00:01 UTC to Wednesday 23:59 UTC. Grab your chance to share a podium worthy prize pool of €2,500 with 40 lucky riders.<br/><br/>Just make a minimum bet of €0.5 and be ready for the race. <br/><br/>Good luck and let’s begin the Derby!"
     },
-    "demigods" : {
-      "title" : "Demi God Tales <br>Tournament",
-      "upTo" : "€20,000",
-      "name" : "Become the hero of the Demi God Tales",
-      "text" : "Greek myths about gods, demigods, heroes and humans make up a thousand fascinating stories told to mankind for centuries. Spinomenal took these immense tales and turned them into an unforgettable series of slot games in the Demi Gods Tales Tournament."
+    "letItBeer": {
+      "title": "Let it BEER Tournament Round I",
+      "prize": "€20,000",
+      "name": "Say cheers with the “Let it BEER” Tournament",
+      "text": "Oktoberfest is just around the corner, so we have teamed up with Spinomenal and prepared a nice cool tournament: “Let it BEER”. But stay sober whilst playing and don’t miss a chance to hop into the refreshing €20,000 prize pool! Round I runs between September 14th, 00:00 and September 22nd, 23:59 (GMT).<br/><br/>To take part in Round I just play any of the participating games. October’s beer fest is here!"
     }
-  },
-  "twitter" : {
-    "twitterBtn" : "Twitter",
-    "twitterAccount" : "Twitter account",
-    "tweet" : "tweet"
   },
   "tournaments" : {
     "games" : "Games in this tournament",
@@ -1357,35 +1352,6 @@
     "ticket" : "Ticket",
     "tickets" : "Tickets"
   },
-  "sunshine_spins_lottery" : {
-    "title" : "Sunshine Spins<br/> lottery",
-    "name" : "Sunshine Spins lottery",
-    "prize" : "4,000 Free Spins",
-    "text" : "Happy summer people decked out in happy summer clothes, marching toward this month’s fun-stuffed festival: The Sunshine Spins lottery!<br/><br/>With the Sunshine Spins lottery, take yourself back to the time of Woodstock, Isle of Wight Festival, and San Francisco. To join in just run around barefoot and rock out to your favourite slots. Enjoy the vibe of the 4000 Free Spin prize pool with 50 lucky winners!<br/>So put your best summer clothes on and remember, “it’s all about the spins man!”",
-    "terms" : [
-      {
-        "text" : "The lottery will last 7 days starting at 00.01 (UTC) on Tuesday and ending at 23.59 (UTC) on Monday."
-      },
-      {
-        "text" : "The minimum deposit required for a lottery ticket is 20 EUR, 30 CAD/AUD, 500 CZK, 350 ZAR, 40 BNG, 150 DKK/HRK, 100 RON."
-      },
-      {
-        "text" : "The number of lottery tickets per player is unlimited."
-      },
-      {
-        "text" : "Every ticket can be a winning ticket."
-      },
-      {
-        "text" : "At the time of the draw, the game account must not be blocked."
-      },
-      {
-        "text" : "Prizes of 4000 Free Spins will be awarded automatically at the end of the lottery every week on Monday."
-      },
-      {
-        "text" : "For Free Spins, wagering is x5."
-      }
-    ]
-  },
   "tesla_lottery" : {
     "metaTitle" : "➤ Tesla Lottery With Tesla Model 3 - Play Your Favorite Games And Win Great Prize - Tesla Model 3!",
     "metaDescription" : "✭ Try Your Luck In New Tesla Lottery by NineCasino ➔ Take a ticket for a Tesla!",
@@ -1414,61 +1380,80 @@
       }
     ]
   },
-  "spiritOfEgypt" : {
-    "title" : "Spirit of Egypt 60k",
-    "prize" : "€60,000",
-    "text" : "New adventures are on the horizon and Playson is waiting with the Spirit of Egypt 60k tournament, running between 0:01 UTC on the 20th of August 2021 and 23:59 UTC 29th of August 2021.<br/><br/>The total Prize pool is a whopping €60,000, and if you reach the peak of the pyramid the top prize is €10,000! Make your own luck with the Spirit of Egypt 60k!",
-    "textMobile" : "New adventures are on the horizon and Playson is waiting with the Spirit of Egypt 60k tournament, running between 0:01 UTC on the 20th of August 2021 and 23:59 UTC 29th of August 2021.<br/><br/>The total Prize pool is a whopping €60,000, and if you reach the peak of the pyramid the top prize is €10,000! Make your own luck with the Spirit of Egypt 60k!",
-    "metaInfo" : {
-      "title" : "➤ Spirit of Egypt 60k Tournament With Solid Prize Pool €60,000 - Play Your Favorite Games And Win Great Prizes!",
-      "description" : "✭ Try Your Luck In New Spirit of Egypt 60k by Playson ➔ Each Won Bet Brings You Points!"
-    },
-    "terms" : [
-      {
-        "title" : "The Spirit of Egypt 60k tournament, running between 0:01 UTC on the 20th of August 2021 and 23:59 UTC 29th of August 2021."
-      },
-      {
-        "title" : "The total Prize pool is €60,000."
-      },
-      {
-        "title" : "The 20 participating games: <br/>● 5 Fortunator <br/>● 9 Happy Pharaohs <br/>● Book of Gold 2: Double HitTM <br/>● Book of Gold: Multichance <br/>● Buffalo Power MegawaysTM <br/>● Buffalo Power: Hold and Win <br/>● Burning Wins: classic 5 lines <br/>● Divine Dragon: Hold and Win <br/>● Eagle Power: Hold and Win <br/>● Hot Burning Wins <br/>● Hot Coins: Hold and Win <br/>● Legend of Cleopatra <br/>● Legend of Cleopatra MegawaysTM <br/>● Rich Diamonds: Hold and Win <br/>● Rise of Egypt Deluxe <br/>● Sevens n Fruits <br/>● Solar Queen <br/>● Solar Temple <br/>● Spirit of Egypt: Hold and Win <br/>● Wolf Power: Hold and Win."
-      },
-      {
-        "title" : "No minimum bet is required to qualify."
-      },
-      {
-        "title" : "Points are calculated round-by-round, with each 1 EUR (or currency equivalent) wagered equaling 100 points."
-      }
-    ]
-  },
-  "demigods": {
-    "title": "Demi Gods Tales <br/>Tournament <br/>Round II",
+  "letItBeer": {
+    "title": "Let it BEER<br> Tournament<br> Round I",
     "prize": "€20,000",
-    "text": "Greek myths about gods, demigods, heroes and humans make up a thousand fascinating stories told to mankind for centuries. Spinomenal took these immense tales and turned them into an unforgettable series of slot games in the Demi Gods Tales Tournament.",
-    "textMobile": "Greek myths about gods, demigods, heroes and humans make up a thousand fascinating stories told to mankind for centuries. Spinomenal took these immense tales and turned them into an unforgettable series of slot games in the Demi Gods Tales Tournament.",
+    "text": "Oktoberfest is just around the corner, so we have teamed up with Spinomenal and prepared a nice cool tournament: “Let it BEER”. But stay sober whilst playing and don’t miss a chance to hop into the refreshing €20,000 prize pool!<br/><br/>Don’t worry be hoppy with the “Let it BEER” Tournament!",
+    "textMobile": "Oktoberfest is just around the corner, so we have teamed up with Spinomenal and prepared a nice cool tournament: “Let it BEER”. But stay sober whilst playing and don’t miss a chance to hop into the refreshing €20,000 prize pool!",
     "terms": [
       {
-        "title": "Round II runs between August 30th 00:00 GMT and September 5th 23:59 GMT.<br><br>"
+        "title": "Round I runs between September 14th, 00:00 and September 22nd, 23:59 (GMT)"
       },
       {
-        "title": "Participating games: <br>Demi Gods III, Demi Gods III – 15 Lines, Book Of Demi Gods III.<br><br>"
+        "title": "The 150 first players on the leaderboard will share a prize of €20,000."
       },
       {
-        "title": "The 150 first players on the leaderboard will share a prize of 20,000 EUR.<br><br>"
+        "title": "Round I has 3 participating games: OktoberSpinFest, Beer Collection 10 Lines, and Beer Collection 40 Lines. "
       },
       {
-        "title": "Play any of the participating games. Each time the “Odin” symbol lands on one of the reels, you will be rewarded with 1 point (for example, if at the end of a spin 3 Odin symbols appear on the reels, you will be rewarded with 3 points)."
+        "title": "The minimum qualifying bet per spin to participate in the tournament is €0.5."
       },
       {
-        "title": "5. Points received are tallied throughout the tournament period. The more points you collect, the higher your position on the leaderboard."
+        "title": "Each win rewards you with a score based on the win multiplier (for example if you wagered 1 EUR and won 10 EUR, you would receive 10 points)."
       },
       {
-        "title": "Minimum qualifying bet per spin to participate in the tournament is 0.5 EUR."
+        "title": "Points received are summed up throughout the tournament period.  The more points you collect, the higher your position on the leaderboard."
       }
     ],
-    "metaInfo": {
-      "title": "➤ Demi God Tales Tournament With Solid Prize Pool €40,000 - Play Your Favorite Games And Win Great Prizes!",
-      "description": "✭ Try Your Luck In New Demi God Tales by Spinomenal  ➔ Complete Missions - Win Prizes!"
+    "metaTags": {
+      "title": "➤ Let it BEER  Tournament With Solid Prize Pool €40,000 - Play Your Favorite Games And Win Great Prizes!",
+      "description": "✭ Try Your Luck In New Let it BEER  by Spinomenal  ➔ Each Won Bet Brings You Points!"
+    }
+  },
+  "metaTags": {
+    "promotions": {
+      "title": "Promotions",
+      "description": "Here You Can Find Out About Our Welcome Bonus For New Players And Other Regular Promotions At Ninecasino"
+    },
+    "daily-cashback": {
+      "title": "Daily Cashback Up To 20%",
+      "description": "Daily Cashback Up To 20% - If You Lose We Give You Cashback with x5 wagering."
+    },
+    "about-us": {
+      "title": "Information About Ninecasino",
+      "description": "Detailed Information About Us, Our Software, And What We Offer Our Clients ✓ Fast withdrawal ✓ Fully licensed"
+    },
+    "faq": {
+      "title": "FAQ",
+      "description": "Frequently Asked Questions - Here You Can Find Answers To The Most Popular Questions About Ninecasino"
+    },
+    "terms": {
+      "title": "Terms & Conditions",
+      "description": "This Page Will Help You To Stay Informed About Ninecasino's Terms And Conditions While Interacting With Our Site"
+    },
+    "bonus-terms": {
+      "title": "Information About Bonuses – How To Receive And Withdraw Your Bonuses In Ninecasino",
+      "description": "Detailed Information About Bonuses: How To Receive And Withdraw Bonuses At Ninecasino"
+    },
+    "responsible-gaming": {
+      "title": "Responsible and Controlled Gambling At Ninecasino",
+      "description": "Here You Can Find About Responsible Gaming Tools At Your Disposal To Control Your Gaming Experience"
+    },
+    "risk-warnings": {
+      "title": "Risk Warnings",
+      "description": "Information About The Risks You Take Paticipating In Games At Ninecasino"
+    },
+    "privacy-policy": {
+      "title": "Privacy Policy",
+      "description": "Privacy Policy Of Ninecasino: Everything You Need To Know About The Safety Of Your Financial Information And Personal Account"
+    },
+    "bitcoins": {
+      "title": "How To Play On Ninecasino With Bitcoins",
+      "description": "Detailed Information How You Can Play With Bitcoin at Ninecasino"
+    },
+    "aml-policy": {
+      "title": "Incorporating Fraud and Anti Money Laundering Policy",
+      "description": "Detailed Information About How We Handle Incorporating Fraud and Anti Money Laundering"
     }
   }
 }
