NINE-738 add german text of cookie policy

--- a/locales/de.json
+++ b/locales/de.json
@@ -1,5 +1,9 @@
 {
   "title": "Ninecasino",
+  "cookiePolicy": {
+    "text": "Wir verwenden Cookies, um Ihre Erfahrung zu verbessern. Durch die Verwendung unserer Webseite stimmen Sie unserer",
+    "linkName": "Cookie-Richtline zu"
+  },
   "buttons": {
     "signUp": "Erstanmeldung",
     "register": "Registrieren",
