--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,9 @@
 {
   "title": "Ninecasino",
+  "cookiePolicy": {
+    "text": "We use cookies to improve your experience. By using our website you are accepting our",
+    "linkName": "Cookie Policy"
+  },
   "buttons": {
     "signUp": "Sign up",
     "register": "Register",
