--- a/locales/cs.json
+++ b/locales/cs.json
@@ -1,5 +1,11 @@
 {
   "title": "Ninecasino",
+  "cookiePolicy": {
+    "text": "We use cookies to improve your experience. By using our website you are accepting our",
+    "linkName": "Cookie Policy",
+    "textMobile": "Používáme",
+    "linkNameMobile": "soubory cookie"
+  },
   "buttons": {
     "signUp": "Zaregistrovat se",
     "register": "Zaregistrovat se",
