NINE-747 add footer link to landing page

--- a/locales/en.json
+++ b/locales/en.json
@@ -128,6 +128,7 @@
     "promotion": "Promotions",
     "aboutUs": "About us",
     "faq": "FAQ",
+    "app": "Application",
     "btc": "About BTC",
     "aml": "AML policy",
     "terms": "Terms and conditions",
