--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -129,6 +129,7 @@
     "promotion": "Promotions",
     "aboutUs": "About us",
     "faq": "FAQ",
+    "app": "Application",
     "btc": "About BTC",
     "aml": "AML policy",
     "terms": "Terms and conditions",
