--- a/locales/cs.json
+++ b/locales/cs.json
@@ -212,7 +212,8 @@
     "winners": "Vítězové"
   },
   "actions": {
-    "addCurrency": "Add currency"
+    "addCurrency": "Add currency",
+    "playReal": "Místo toho hrajte za skutečné peníze"
   },
   "homepage": {
     "heroBanner": {
