--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -218,7 +218,8 @@
     "winners": "Winners"
   },
   "actions": {
-    "addCurrency": "Add currency"
+    "addCurrency": "Add currency",
+    "playReal": "Play for real money"
   },
   "homepage": {
     "heroBanner": {
