--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -215,7 +215,8 @@
     "winners": "Les gagnants"
   },
   "actions": {
-    "addCurrency": "Ajouter une devise"
+    "addCurrency": "Ajouter une devise",
+    "playReal": "Jouez plutôt pour de l'argent réel"
   },
   "homepage": {
     "heroBanner": {
