--- a/locales/za.json
+++ b/locales/za.json
@@ -209,7 +209,8 @@
     "winners" : "Winners"
   },
   "actions" : {
-    "addCurrency" : "Add currency"
+    "addCurrency" : "Add currency",
+    "playReal": "Play for real money"
   },
   "homepage" : {
     "heroBanner" : {
