NINE-751 deleted words in de faq

--- a/locales/de.json
+++ b/locales/de.json
@@ -914,7 +914,7 @@
           "items": [
             {
               "title": "WELCHE MÖGLICHKEITEN HABE ICH, GELD IN MEIN KONTO EINZUZAHLEN?",
-              "answer": "Sobald du bereit bist, mit echtem Geld zu spielen, wirst du sehen, dass Einzahlungen in Ninecasino einfacher nicht sein könnten. Wir akzeptieren alle gängigen Zahlungsmethoden, darunter Kredit-/Bankkarten, Neteller, Skrill und viele andere elektronische Zahlungsmethoden. Du findest die in deinem Land verfügbaren Zahlungsmethoden im Abschnitt Einzahlung der Kasse. Verfügbarkeit ist landesabhängig."
+              "answer": "Sobald du bereit bist, mit echtem Geld zu spielen, wirst du sehen, dass Einzahlungen in Ninecasino einfacher nicht sein könnten. Wir akzeptieren alle gängigen Zahlungsmethoden, darunter Kredit-/Bankkarten und viele andere elektronische Zahlungsmethoden. Du findest die in deinem Land verfügbaren Zahlungsmethoden im Abschnitt Einzahlung der Kasse. Verfügbarkeit ist landesabhängig."
             },
             {
               "title": "ICH HABE SOEBEN EINE ABHEBUNG ANGEFORDERT. MUSS ICH IRGENDWELCHE DOKUMENTATION SENDEN?",
